--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Travel -- Juvenile fiction'
 - !lcsh 'Women travelers -- Juvenile fiction'
 - !lcsh 'Japan -- Juvenile fiction'
+- GITenberg
 title: The Motor Maids in Fair Japan
 url: http://www.gutenberg.org/ebooks/13450
